# ProjectZero

./: .gitignore  CLAUDE.md  config.json  pyproject.toml
.claude/: settings.local.json
.claude/commands/: phase1-bridge.md  phase2-mcp-server.md  phase3-first-battle.md  phase4-knowledge-base.md  research-memory-map.md
docs/: ARCHITECTURE.md  IMPL_NAME_ENTRY_AND_LUA_CONSOLE.md  MCP_TOOLS.md  MEMORY_MAP.md  SPEC.md  system_prompt.md
lua/: frame_capture.lua  input_reader.lua  json.lua  main.lua  state_exporter.lua
scripts/: mcp_entry.py  play_utils.py  run_session.py  start_game.py  test_bridge.py  test_first_battle.py  test_title_screen.py
src/bridge/: auto_checkpoint.py  emulator_bridge.py
src/knowledge_base/: kb.py  session.py
src/mcp_server/: __main__.py  performance.py  screenshot_policy.py  server.py  validation.py
src/state_parser/: enemy_names.py  item_names.py  map_names.py  models.py  parser.py  psi_names.py  story_objectives.py
tests/: test_auto_checkpoint.py  test_emulator_bridge.py  test_enemy_names.py  test_full_stack.py  test_item_names.py  test_knowledge_base.py  test_lookup_tables.py  test_mcp_integration.py  test_parser_party.py  test_performance.py  test_psi_names.py  test_screenshot_policy.py  test_server_helpers.py  test_session.py  test_state_parser.py  test_story_objectives.py  test_validation.py
